address-book-service (0.1.2+17.04.20161124.2-0ubuntu1) UNRELEASED; urgency=medium

  [ Rico Tzschichholz ]
  * Fix build with vala 0.36

  [ Jeremy Bicha ]
  * Don't build-depend on evolution-data-server-online-accounts

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Wed, 14 Jun 2017 12:35:13 -0400

address-book-service (0.1.2+17.04.20161124.1-0ubuntu1) zesty; urgency=medium

  [ Michael Terry ]
  * Handle running inside of a snap by respecting the $SNAP variable and
    not using hard coded paths. (LP: #1629009)

  [ Renato Araujo Oliveira Filho ]
  * Use the service as DBUS activated.

 -- Renato Araujo Oliveira Filho <renato.filho@canonical.com>  Thu, 24 Nov 2016 18:54:54 +0000

address-book-service (0.1.2+16.10.20161007-0ubuntu1) yakkety; urgency=medium

  * Check if adaptor was destroyed before use it. (LP: #1518486)

 -- Renato Araujo Oliveira Filho <renato.filho@canonical.com>  Fri, 07 Oct 2016 13:35:37 +0000

address-book-service (0.1.2+16.10.20160920-0ubuntu1) yakkety; urgency=medium

  * Remove 'address-book-updater' as install dep. (LP: #1625172,
    #1625642)

 -- Renato Araujo Oliveira Filho <renato.filho@canonical.com>  Tue, 20 Sep 2016 21:41:36 +0000

address-book-service (0.1.2+16.10.20160908-0ubuntu1) yakkety; urgency=medium

  * no change rebuild for libphonenumber7

 -- Ken VanDine <ken.vandine@canonical.com>  Thu, 08 Sep 2016 21:34:42 +0000

address-book-service (0.1.2+16.10.20160820-0ubuntu1) yakkety; urgency=medium

  * No-change rebuild against latest evolution-data-server

 -- Jeremy Bicha <jbicha@ubuntu.com>  Sat, 20 Aug 2016 02:35:59 +0000

address-book-service (0.1.2+16.10.20160721.1-0ubuntu1) yakkety; urgency=medium

  * Create a new package evolution-data-server-utouch.

 -- Renato Araujo Oliveira Filho <renato.filho@canonical.com>  Thu, 21 Jul 2016 14:38:28 +0000

address-book-service (0.1.1+16.10.20160711-0ubuntu1) yakkety; urgency=medium

  * Created a debian package "evolution-data-server-ubuntu" to used by
    others projects.
